--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "slick-carousel": "^1.8.1",
     "star-rating.js": "^4.3.0",
     "stimulus-lightbox": "^3.1.0",
+    "typed.js": "^2.0.12",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
