--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/config/google_cloud.json
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
